# hackboard

./: .gitignore  README.md  codestyle.editorconfig  pyproject.toml  setup.cfg  widgets.chat
src/hackboard/: __init__.py  _inputwindow.py  _layoutwindow.py  _mainwindow.py
src/hackboard/pyside/: __init__.py  _basewindow.py  _debugdata.py  _docwidget.py  _inputwindow.py  _layoutwindow.py  _logwidget.py  _mainwindow.py  _policy.py  _qlabel.css  _styles.py  _toolbar.py
src/hackboard/pyside/style/: __init__.py  _fontstyles.py  _metastyle.py
src/hackboard/settings/: __init__.py  _basestyle.py  _styleinstances.py
src/hackboard/workside/: __init__.py  _corewidget.py  _label.py  _listwidget.py  _logwidget.py
src/moreworktoy/: __init__.py  _argumenterror.py  _categorify.py  _enumify.py  _floatfield.py  _index.py  _itermeta.py  _overloader.py  _parentparser.py  _textbetween.py  _typekey.py
src/workstyle/: __init__.py  _corewidget.py  _indicator.py  lets_test.chat  lets_test2.chat
src/workstyle/stylesettings/: __init__.py  _basestyle.py  _styleinstances.py
