[METADATA]
name = HackBoard
version = 0.31.0
author = Asger Jon Vistisen
author_email = asgerjon2@gmail.com
description = Fast Word Processing
long_description = file:README.md,LICENSE
long_description_content_type = text/markdown
url =
project_urls =
classifiers =
    Programming Language::Python::3
    LICENSE::
    Operating System::OS Independent
keywords =
    Fast Word Processing
    simple office
    primitivism
    Asger Jon Vistisen
[OPTIONS]
package_dir =
    =src
packages = find:
python_requires = >=3.8
[options.packages.find]
where = src